# NAIST-jdic

./: ._AUTHORS  ._COPYING  ._ChangeLog  ._INSTALL  ._INSTALL-ja  ._Makefile.am  ._Makefile.bat  ._NEWS  ._README  ._cforms.cha  ._chasenrc.in  ._configure  ._connect.cha  ._ctypes.cha  ._grammar.cha  ._install-sh  ._missing  ._mkinstalldirs  ._naist-jdic.dic  ._version.cha.in  AUTHORS  INSTALL-ja  Makefile.am  Makefile.bat  Makefile.in  NEWS  README  README.md  aclocal.m4  chasenrc  chasenrc.in  configure  configure.in  connect.cha  ctypes.cha  eucjp_to_utf8.py  left-id.def  matrix.def  right-id.def  unk.def  (+1 more)
doc/: Makefile.am  Makefile.in  NAIST-jdic-ja.tex
